--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <br>
 <body style="background:rgb(255, 41, 41);">
 <nav>
-<button class="aaa">PERFUMES Y COSMETICOS   BELLEZA.com<a href="fotos.html"></a></button>
+<button class="aaa">PERFUMES Y COSMETICOS   BELLEZA.comxxo<a href="fotos.html"></a></button>
 <br>
 <br>
 <a class="botoon" href="fotos.html">INTRODUCCION</a>
