--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <link rel="stylesheet" href="maquetacion.css">
 </head>
 <br>
-<body style="background:rgb(255, 41, 41);text-align: center;">
+<body style="background:rgb(255, 41, 41);">
 <nav>
 <button class="aaa">PERFUMES Y COSMETICOS   BELLEZA.com<a href="fotos.html"></a></button>
 <br>
