--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <br>
 <br>
 <br>
-<h2 style="text-align: center;width: 100%">TINTURADOSs</h2>
+<h2 style="text-align: center;width: 100%">TINTURADOS</h2>
 <br>
 <section><img style="width:380px; height:380px" src="19.jpg" alt=""><p>circle hutt $ 15    
 </p>     </section>
