--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
 <br>
 <br>
 <br>
-<h2 style="text-align: center;width: 100%">TINTURADOS</h2>
-<br>
+<h2 style="text-align: center;width: 100%">TINTURADOS de cabello</h2>
 <section><img style="width:380px; height:380px" src="19.jpg" alt=""><p>circle hutt $ 15    
 </p>     </section>
 <section><img style="width:380px; height:380px" src="20.jpg" alt=""><p>explanada home $ 20     
