--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <br>
 <br>
 <br>
-<p style="text-align: center;width: 100%;display:flex">TINTURADOS de cabello</p>
+<h2 style="text-align: center;width: 100%;display:flex">TINTURADOS DE CABELLO</h2>
 <section><img style="width:380px; height:380px" src="19.jpg" alt=""><p>circle hutt $ 15    
 </p>     </section>
 <section><img style="width:380px; height:380px" src="20.jpg" alt=""><p>explanada home $ 20     
